--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,9 @@
 /*! tailwindcss v4.1.3 | MIT License | https://tailwindcss.com */
+@import url("https://fonts.googleapis.com/css2?family=Geist:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @layer properties;
 @layer theme, base, components, utilities;
 @layer theme {
   :root, :host {
-    --font-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
-      "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-gray-100: oklch(96.7% 0.003 264.542);
@@ -40,7 +39,7 @@
     --radius-xl: 0.75rem;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    --default-font-family: var(--font-sans);
+    --default-font-family: "Geist", sans-serif;
     --default-mono-font-family: var(--font-mono);
   }
 }
@@ -325,12 +324,6 @@
   }
   .bg-white {
     background-color: var(--color-white);
-  }
-  .bg-\[radial-gradient\(circle\,_\#ffffff1a_1px\,_transparent_1px\)\] {
-    background-image: radial-gradient(circle, #ffffff1a 1px, transparent 1px);
-  }
-  .\[background-size\:16px_16px\] {
-    background-size: 16px 16px;
   }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
